--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
           我的餐廳清單
         </a>
-        <a class="navbar-brand" style="color:#4592af" href="./restaurant/new">新增餐廳</a>
+        <a class="navbar-brand" style="color:#4592af" href="/restaurant/new">新增餐廳</a>
         <div>
           <form action="/search" class="form-inline ">
             <a class="navbar-brand" style="color:#4592af">尋找餐廳</a>
