--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,37 @@
+<nav class="navbar navbar-light bg-light">
+  <div class="container">
+    <div>
+      <form action="/search" class="form-inline ">
+        <div class="input-group">
+          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
+            value="{{keyword}}" aria-describedby="search-button">
+          <div class="input-group-append">
+            <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <div class="btn-group">
+      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+        aria-expanded="false">Sort
+      </button>
+      <form action="/">
+        <div class="dropdown-menu">
+
+          <a class="dropdown-item" href="asc">A - Z</a>
+          <a class="dropdown-item" href="desc">Z - A</a>
+          <a class="dropdown-item" href="category">類別</a>
+          <a class="dropdown-item" href="location">地區</a>
+        </div>
+      </form>
+    </div>
+  </div>
+</nav>
+
+
+
+
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
